Changes BurnItNow

2010-08-xx beta 3
	* Revived Burn It Now! renamed at BurnItNow
	* Added Haiku HVIF vector icon from Michele Frau
	* Converted from a BeIDE project to use cmake for building
	* Added MIT headers to all source files
	* Moved source code to OSDrawer.net
	* Major code restyling/refactoring to bring it more in line with Haiku guidelines
	* Removed custom controls in favor of normal Haiku ones
	* Now builds and mostly works on Haiku using the cdrecord OptionalPackage
	* Probably more Haiku fixes and tweaks before we actually post a beta build

28-12-2000 beta 2
	
28-12-2000 beta 1
	* Changed to Beta releases its pretty stable now
	* Status window updated
	* A new checkbutton in Prefstab (burnproof) it doesnt work yet
	* Calculation of size finished

26-12-2000 alpha 7 the last alpha next version will be beta 1
	*Deleted VCD from TODO-list (isnt an important thing i will add a script or a tutorial how to do
	  VCD:s later)
	*Created a new class (jpButton) changed the look on the buttons.
	*Added the new StatusWindow (this window isnt finished yet it will look like EasyCD creators 
	  status window when its finished =)

21-12-2000 alpha 6
	*Added support for Bootable CD:s (El torito)
	*Updated the help
	*Added VCD to TODO-list

17-12-2000 alpha 5
	*Shows time of audiotrack
	*Added a popupmenu on Rightlist when rightclicking on the mouse(MoveDown, MoveUp, Remove)
	*Remade the DataTab, its now easier to use. Added Windows 9x/ME, Mac, BeOS, Joliet,
	  RockRidge, Real RockRidge, ISO-9660. And a button to rename the Volume.
	*Added a window where you can name your volume.
	*BurnIT NOW! saves all the preferenses and load them on the next start.
	*Added a new menuitem in Popupmenu, "Play" opens the preferd app and play the audiofile
	*Fixed so BurnIT NOW! doesnt crash when the system doesnt have cdrecord or mkisofs
	*Added options Pad, Swab, Nofix, Preemp in the audiotab and dao in the prefstab.