@@ -87,10 +87,6 @@
           		 	file to disk. This option has no effect on data tracks.
           		 	
 	
-	<B>CopyCDTab:</B>
-		Not implented yet
-		
-		
 	<B>CDRWTab:</B>
 		Blank(list) - Choose blanktype.
 		
