@@ -5925,7 +5925,6 @@ resource(30, "cd128.png") #'PNG ' array {
 };
 
 
-
 resource(31, "audio.png") #'PNG ' array {
 	$"89504E470D0A1A0A0000000D49484452000000090000000A0806000000660574"
 	$"BE000000BE4944415418958DD0216B420114C5F1DFD3E007D8C4E0D20B2B6351"
@@ -5939,29 +5938,28 @@ resource(31, "audio.png") #'PNG ' array {
 
 
 resource(33, "cd_16.png") #'PNG ' array {
-	$"89504E470D0A1A0A0000000D49484452000000100000000C08060000006BE73D"
-	$"81000002724944415428915DD2496853611486E1F7BF5372631AD29A0A063518"
-	$"1C82C601455404C552C74AC561572520B8D09DE84A17AEC48D1BC585E0842082"
-	$"0A2A0EB8509C40B1B48AB5155BB5AD6DADA943DB24CD747387DF852D68BFCD81"
-	$"03DF591C1EC1FFD18175C07A2001D48CEF33403B7009F8FA6F418C4F05D8B36A"
-	$"E3EE73F53B52E6E26482A5B110D3423ED27941DB778BFEBE7EDE373FE3EAA923"
-	$"2DC03EA063E280065C387CE6766AF9DAAD1886814F95CC099589066C060A069F"
-	$"B27E1C5752B05CBE0DF4F1E0D2495EDFBDD8045C5381A3074F3F3C9458B90184"
-	$"82108272C991DFFB86C7B2D99218CB952B96E355729E6A8CE66D0AD24F64DE6A"
-	$"F22343BB7EF576DC5457341E78BE70E35ECAB6C4B23D729992539DFF5D981719"
-	$"0EF47436EB9A97D163912965BD62155B7F48335B72B03D157F2446E7E32B3395"
-	$"A989D5640A2EBF7216832325AC1FA3D9E4AC62E9FEBD3B5A2A953ABFBDB1B1AB"
-	$"901DAA0A1A92917C85A2E550B65D82B5B301E25AC5F528561CA4044F42CED6C2"
-	$"9FD366BEA1619B1D8FC7F787C36142E169999F4521C20103CB71713D4945FEFD"
-	$"BF36D8FE92E8A27A8422D05585AA1A53FDA6EA0159D40BF1E4F480AEE2A42B86"
-	$"CC0723D5ABE64AB2459BB1B2C3978F6D003DEA70F75B77C6A235753362716645"
-	$"0224A255D4844D35541DF4CF8F1AEACC5A9FAEF84DB3E42A2014023E0DDDB378"
-	$"74F904FD5DEF76AAC0ABCF2F6EC4962C5BB934B9700101BF8EA148A6FA3D6AFC"
-	$"1E862211802D058E27F8991EE4FAD9E33CBD75A10978A2021E70F7CDE31B3DE9"
-	$"DECECDA639450F991AB54185B0A920A4432693A1BBAB8B47F7AE736CDF9696EE"
-	$"0FAD9B8027FF4A9C88364EB96E12E5D171CA972753FE03149D0709ED7377DA00"
-	$"00000049454E44AE426082"
+	$"89504E470D0A1A0A0000000D494844520000001000000010080600000168F4CF"
+	$"F70000024449444154388DBD915B48937118879F6FDBB76F9B4E34B651A25644"
+	$"19393A5CEC4202216221421046516178E1FDECAA240A442BE8A2D2BC90AE5A11"
+	$"158620952312D461D009346D9AD43A48333C4FF7CD6D9F3BFCBBA930490A8A9E"
+	$"BB1FBC3CEFCBEF85E5F4F6F6C57F04A9BBE79D08CFCEF36BDA3B06C45C3822BA"
+	$"FC41B1CAC832A4CECE216156B4585AA4D2CD575A84CEE7EB40CEB2591CF945D6"
+	$"87BEDB2DBF777C6347B77F447C1E57C5F44C448C0655E1F19C150012C04DAF5F"
+	$"A452694A9C796A68FC833137CF911C0F913DF8EAD94F96C3E72E3489B6B67651"
+	$"5D5DF305D8FDC7FBFF019EDA3322F8312A666623622CA48A475D4302D8032055"
+	$"541C7A5D7BA2C1B9303FAF3A1C69D9643267A6A6F496D8629C23474BB7EAB66C"
+	$"DEE59C084D128BAA84C3D3288A3EAD4663685A12609FAEA9F974B16C31612F28"
+	$"B2166F2B35D91D85D6F59BF2098E05001E7F3F433E5059F5C6EBBD2B5A5BAF09"
+	$"E03A90FD3F7B581D69459681CAAAE335752E976BE7BAB53632426262728E81FE"
+	$"FED11BDED6F3C03D405B2928AEAF6F19DDEBDE8FC9A460322B48645017A61206"
+	$"03222BC76E4EC433A8EA2289B8C693BE2E1A1B3DC7803B12C0A9939784CB5586"
+	$"2481A4D3A1C8C9B8D1A4A6DD6EB71FD07C3E5FB9CD66672410B564320291110C"
+	$"0FBFE472735D8D01E0F98B9EC0C60D254ED96844960D6866C5AC4F58359FEF69"
+	$"99D56A4056CCFA44DAA2380A73D0121AC9A5246FDF0722C0D2F20EB61FAFAE1D"
+	$"74971FA4B0A8006B964C6E8EC29A5C85545AB01059E2D3588807F73BB8DAD470"
+	$"11B80504FEFA0B5F01250FF466B0EC2FAC0000000049454E44AE426082"
 };
+
 
 resource(34, "data.png") #'PNG ' array {
 	$"89504E470D0A1A0A0000000D49484452000000080000000908060000000F536D"
@@ -7157,4 +7155,34 @@ resource(54, "cdprefs_64.png") #'PNG ' array {
 	$"D885CAE0EE18DC6901803AA47600158F2FA76AF77C2BB0DDEFBD76A8A3A1C128"
 	$"E7F6779470EEC25DB80B770EFE056F11E4A6A184E9990000000049454E44AE42"
 	$"6082"
+};
+
+
+resource(55, "log_16.png") #'PNG ' array {
+	$"89504E470D0A1A0A0000000D494844520000001000000010080600000168F4CF"
+	$"F7000002F949444154388D75917B68930714C57FF99AC63E94D9D274D3CA949A"
+	$"36D68E5A74F52D4A5126537416A1284AC507CEC13A9803B73264432B58415174"
+	$"9B2ED86E54E76675F88A7543A9964E59151D2E357D4793B6BA84A4316DF2E5CB"
+	$"E3FA87B5D4A9E7AFCBBDE79CCB3D179EC304C0A5533B04237C0040EDC152012A"
+	$"74008E076725317522D6CB4D00282DB70EC99103E502940160ADFE4286DC5000"
+	$"7CBA4C22EA63D9B23A5B947CB37167A2D681BDF9677EACEB9ACE9E4F8B24A23E"
+	$"963F6A4A8665005CF9FD9048ECA9C4225E19F4B74BCBDDB3B2743AA21B9A673D"
+	$"B87DD465B3BBC8C84823D398C9D419EB960156E58C659368A13E97E5F8059255"
+	$"1B9ABB99819E1B008540C54B6B1A2C1FCA37DB3F12A0FA452FE14571B1BA42FA"
+	$"FDFEF7DA1D4F4EF31A4C8D863D2231BF68A13E713BFF92FD7B3F13003DC0F755"
+	$"1B6D371BCFD11F88B164C952D2DF363323AB8761C2DC99D924A6C469B1D97076"
+	$"A5A0082C5C57A71B8E2EE8ED22E069251CF4120979D9B079970A7C0EA0EFB85F"
+	$"2B71BD89B6A62A54BF97409F017B73EB552009D800B0B8C1B2423AEF9F90879D"
+	$"77A4BC6CB6005F03892F9D6184958D751BA5BEAA48809CD79D3AF4932312D53C"
+	$"A20E3C12DF937FA4A5D1223F546E92E279F9B54039503A94B2F28A78D1EC82C3"
+	$"AEEE5BD26A6B1475D025D1B05BE2119F48CC2F127B2AF168BF383AEF49659951"
+	$"76AF418024DD08BD72E3DC97312D219D474E37D30A72484D1D435B7B2FFE4018"
+	$"936932797979AC5DBF0D6B7DD357C029C0A11F61306D74529CEEDE1E34552518"
+	$"F0923A4A483268E41666A228419C762BD6FAA6E5C035200490903DC1B8F5979A"
+	$"BDB77373C66D8D0E38782B59A5D7D54B24F81FA30D41023E3777EFD9196F1C45"
+	$"CDC9ABC19B77BADB8039C002C09FB07ED594EB85EF060CEFCF9DC524F34C0AE6"
+	$"7F4CF258137F36FC8D21EAE19D343D594685C8A087CD3BCE1F0302403FF01070"
+	$"8ECC0020FFDB4F8AFE2D9E33890CF3420C29E9A8F1899CDCB70D9F160E7DF76B"
+	$"EB76E02720F8C6378E40DA9612B3FC56394F4A8A2774006B8194FF939E010BDA"
+	$"604A86AC5F4B0000000049454E44AE426082"
 };
